cmake_minimum_required(VERSION 2.6)
project(libcdim)

add_library(cdim SHARED libcdim.cpp)

set(LIBCDIM_VERSION_MAJOR 0)
set(LIBCDIM_VERSION_MINOR 1)
set(LIBCDIM_VERSION_PATCH 1)
set(LIBCDIM_VERSION_STRING ${LIBCDIM_VERSION_MAJOR}.${LIBCDIM_VERSION_MINOR}.${LIBCDIM_VERSION_PATCH})

set_target_properties(cdim PROPERTIES VERSION ${LIBCDIM_VERSION_STRING} SOVERSION ${LIBCDIM_VERSION_MAJOR})

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)

install(TARGETS cdim DESTINATION lib)
install(FILES libcdim.h DESTINATION include)
